/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine_examples.pingh.client;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.client.settings";
option java_outer_classname = "SettingsProto";
option java_multiple_files = true;

import "spine_examples/pingh/github/values.proto";

// Information about the application settings for specific user.
message UserSettings {

    // Whether the user should NOT receive notifications
    // for new mentions or the expiration of the snooze time.
    //
    bool dnd_enabled = 1;

    // The interval after which the new mention notification is repeated.
    SnoozeTime snooze_time = 2 [(required) = true];

    // List of ignored organizations and repositories.
    //
    // Mentions from these sources are ignored.
    //
    repeated IgnoredSource ignored = 3;
}

// Time after which the notification about the new mention is repeated.
enum SnoozeTime {
    SNOOZE_NOT_ENABLED = 0;

    // The interval is 30 minutes in duration.
    THIRTY_MINUTES = 1;

    // The interval is 2 hours in duration.
    TWO_HOURS = 2;

    // The interval is one day in duration.
    ONE_DAY = 3;
}

// A ignored source of mention.
//
// Mentions from ignored sources are not displayed on the Mentions page,
// and no notifications are sent when new mentions occur in these sources.
//
message IgnoredSource {
    oneof value {

        // An ignored organization.
        //
        // User mentions within any repository of this organization are ignored.
        //
        spine_examples.pingh.github.OrganizationLogin organization = 1;

        // An ignored repository.
        //
        // User mentions within this repository are ignored.
        //
        spine_examples.pingh.github.Repo repository = 2;
    }
}

// The locale settings of the application.
message Locale {

    // The current language used for displaying text in the UI.
    Language language = 1 [(required) = true];
}

// The language used for displaying text in the UI.
enum Language {
    LANGUAGE_NOT_SPECIFIED = 0;
    ENGLISH = 1;
    GERMAN = 2;
    SPANISH = 3;
}
